<?xml version="1.0"?>
<package format="2">
  <name>robust_inverse_dynamics</name>
  <version>0.0.0</version>
  <description>The robust_inverse_dynamics package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="maxwell@todo.todo">maxwell</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rosdyn_core</depend>
  <depend>roscpp</depend>

</package>
